--- a/src/main/resources/templates/managers/manager__main.html
+++ b/src/main/resources/templates/managers/manager__main.html
@@ -33,7 +33,7 @@
             Equipment change
             <div class="notification-number" th:if="${eq_change_count > 0}" th:text="${eq_change_count}"></div>
         </a>
-        <a class="flex-column grid-button button">
+        <a th:href="@{/man/jobApplications}" class="flex-column grid-button button">
             Prawns' job applications
             <div class="notification-number" th:if="${vac_appl_count > 0}" th:text="${vac_appl_count}"></div>
         </a>
