--- a/src/main/resources/templates/managers/manager__new-weapons.html
+++ b/src/main/resources/templates/managers/manager__new-weapons.html
@@ -10,7 +10,7 @@
 <body data-role="man">
 <div class="flex-row-center fixed-header fixed-header_small">
     <a th:href="@{/}">
-        <img alt="back" th:src="@{/images/back.png}" class="button button_back button_round">
+        <img alt="back" th:src="@{/images/back.png}" class="button button_back_dont-remove button_round">
     </a>
     <h1>New weapon requests</h1>
 </div>
