--- a/src/main/resources/templates/prawns/prawn__vacancies.html
+++ b/src/main/resources/templates/prawns/prawn__vacancies.html
@@ -16,6 +16,9 @@
 </div>
 
 <div class="content">
+    <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
+    <div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
+
     <form id="form" action="#" th:action="@{/prawn/vacancies}" method="get" class="flex-row-right font-big">
         <label>
             Hide unavailable jobs
@@ -25,11 +28,21 @@
             Sort by:
             <select id="sorter" name="sort">
                 <option value="salaryAsc"> Salary (asc.)</option>
-                <option th:selected="${param.sort != null ? param.sort[0] == 'salaryDesc' : false}" value="salaryDesc"> Salary (desc.)</option>
-                <option th:selected="${param.sort != null ? param.sort[0] == 'workHoursAsc' : false}" value="workHoursAsc"> Working hours (asc.)</option>
-                <option th:selected="${param.sort != null ? param.sort[0] == 'workHoursDesc' : false}" value="workHoursDesc"> Working hours (desc.)</option>
-                <option th:selected="${param.sort != null ? param.sort[0] == 'karmaAsc' : false}" value="karmaAsc"> Karma (asc.)</option>
-                <option th:selected="${param.sort != null ? param.sort[0] == 'karmaDesc' : false}" value="karmaDesc"> Karma (desc.)</option>
+                <option th:selected="${param.sort != null ? param.sort[0] == 'salaryDesc' : false}" value="salaryDesc">
+                    Salary (desc.)
+                </option>
+                <option th:selected="${param.sort != null ? param.sort[0] == 'workHoursAsc' : false}"
+                        value="workHoursAsc"> Working hours (asc.)
+                </option>
+                <option th:selected="${param.sort != null ? param.sort[0] == 'workHoursDesc' : false}"
+                        value="workHoursDesc"> Working hours (desc.)
+                </option>
+                <option th:selected="${param.sort != null ? param.sort[0] == 'karmaAsc' : false}" value="karmaAsc">
+                    Karma (asc.)
+                </option>
+                <option th:selected="${param.sort != null ? param.sort[0] == 'karmaDesc' : false}" value="karmaDesc">
+                    Karma (desc.)
+                </option>
             </select>
         </label>
         <input id="submit-sort-button" type="submit" class="hidden">
@@ -58,10 +71,9 @@
                 <b>Vacant places</b>
                 <div th:text="${current_job.vacantPlaces}"></div>
             </div>
-            <div class="form-item_middle">
-                <a th:href="@{/prawn}" th:if="${user.karma >= vacancy.requiredKarma and vacancy.vacantPlaces > 0}"
-                   class="button rejected">Quit</a>
-            </div>
+            <form action="#" th:action="@{/prawn/quitJob}" method="post" class="form-item">
+                <input type="submit" class="button rejected" value="Quit">
+            </form>
         </div>
     </div>
 
@@ -84,10 +96,9 @@
                 <b>Vacant places</b>
                 <div th:text="${current_application.vacancy.vacantPlaces}"></div>
             </div>
-            <div class="form-item_middle">
-                <a th:href="@{/prawn}" th:if="${user.karma >= vacancy.requiredKarma and vacancy.vacantPlaces > 0}"
-                   class="button rejected">Withdraw</a>
-            </div>
+            <form action="#" th:action="@{/prawn/withdrawApplication}" method="post" class="form-item">
+                <input type="submit" class="button rejected" value="Withdraw">
+            </form>
         </div>
     </div>
 
@@ -111,10 +122,10 @@
                 <b>Vacant places</b>
                 <div th:text="${vacancy.vacantPlaces}"></div>
             </div>
-            <div class="form-item_middle">
-                <a th:href="@{/prawn}" th:if="${user.karma >= vacancy.requiredKarma and vacancy.vacantPlaces > 0}"
-                   class="button approved">Apply</a>
-            </div>
+            <form action="#" th:action="@{/prawn/vacancyApplication/} + ${vacancy.id}" method="post"
+                  th:if="${user.karma >= vacancy.requiredKarma and vacancy.vacantPlaces > 0}" class="form-item">
+                <input type="submit" class="button approved" value="Apply">
+            </form>
         </div>
     </div>
 </div>
