--- a/src/main/resources/static/css/shop.css
+++ b/src/main/resources/static/css/shop.css
@@ -116,13 +116,17 @@ body {
 }
 
 .department-button {
-    padding: 12px;
-    border: 2px solid black;
-    border-left: none;
+    padding: 15px;
+    border-bottom: 2px solid black;
+    border-right: 2px solid black;
     color: black;
     display: block;
-    margin: 10px 0;
     text-decoration: none;
+    font-size: 18px;
+}
+
+.department-button:first-child {
+    border-top: 2px solid black;
 }
 
 .department-button:hover {
@@ -151,7 +155,6 @@ body {
 
     .grid__departments {
         border: none;
-        border-bottom: 2px solid black;
         grid-area: mobile-header;
     }
 
