--- a/src/main/resources/templates/customers/customer__shop.html
+++ b/src/main/resources/templates/customers/customer__shop.html
@@ -8,7 +8,8 @@
     <title>MNU</title>
 </head>
 <body>
-<div class="desktop-header fixed-header fixed-header_small flex-row-right">You are logged in as ****
+<div class="desktop-header fixed-header fixed-header_small flex-row-right">
+    <b th:text="${user.user.login}"></b>
     <a th:href="@{/profileClient}">
         <img alt="Profile settings" class="shop-icon icon" th:src="@{/images/profile.png}">
     </a>
