--- a/src/main/resources/templates/manufacturers/manufacturer__market.html
+++ b/src/main/resources/templates/manufacturers/manufacturer__market.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 <div class="desktop-header fixed-header fixed-header_small flex-row-right">
-    You are logged in as ****
+    <b th:text="${user.user.login}"></b>
     <a th:href="@{/profileClient}">
         <img alt="Profile settings" class="shop-icon icon" th:src="@{/images/profile.png}">
     </a>
