--- a/src/main/resources/static/css/administrators/admin__district.css
+++ b/src/main/resources/static/css/administrators/admin__district.css
@@ -2,18 +2,69 @@
 
 .grid {
     display: grid;
-    grid: "admin-header admin-header" 80px "table table" "buttons inputs";
-    grid-template-columns: 1fr 9fr;
+    grid: "header header" 80px "form district-grid";
     row-gap: 10px;
+    padding: 5px 15px;
+    grid-template-columns: 1fr 1fr;
 }
 
 .header {
-    grid-area: admin-header;
-    margin-top: 5px;
+    grid-area: header;
+    margin-bottom: 20px;
 }
 
-.button_back {
-    margin-top: -5px;
-    margin-right: 15px;
+.form {
+    grid-area: form;
+    padding: 30px;
+}
+
+.district-grid {
+    grid-area: district-grid;
+    max-width: 500px;
+}
+
+.danger-circle {
+    border: 1px solid black;
+    border-radius: 90px;
+    width: 30px;
+    height: 30px;
+}
+
+.danger-level-3 {
+    background: red;
+}
+
+.danger-level-2 {
+    background: orange;
+}
+
+.danger-level-1 {
+    background: yellow;
+}
+
+.mobile-error {
+    font-size: 24px;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 20vh;
+    display: none;
+}
+
+@media (max-width: 900px) {
+    .grid {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
+
+@media (max-width: 450px) {
+    .mobile-error {
+        display: block;
+    }
+
+    .grid {
+        display: none;
+    }
 }
 
