--- a/src/main/resources/templates/manufacturers/manufacturer__market.html
+++ b/src/main/resources/templates/manufacturers/manufacturer__market.html
@@ -17,7 +17,7 @@
         <img alt="History" class="shop-icon icon" th:src="@{/images/history.svg}">
     </a>
     <a th:href="@{/manufacturer/newProduct}">
-        <img alt="Add item" class="shop-icon icon" th:src="@{/images/add_item.png}">
+        <img alt="Add item" class="shop-icon icon" th:src="@{/images/add_item.svg}">
     </a>
     <a th:href="@{/}">
         <img alt="Cart" class="shop-icon icon" th:src="@{/images/cart.png}">
@@ -83,7 +83,7 @@
         <img alt="History" class="shop-icon icon" th:src="@{/images/history.svg}">
     </a>
     <a th:href="@{/manufacturer/newProduct}">
-        <img alt="Add item" class="shop-icon icon" th:src="@{/images/add_item.png}">
+        <img alt="Add item" class="shop-icon icon" th:src="@{/images/add_item.svg}">
     </a>
     <a th:href="@{/}">
         <img alt="Cart" class="shop-icon icon" th:src="@{/images/cart.png}">
