--- a/src/main/resources/static/css/administrators/admin__district.css
+++ b/src/main/resources/static/css/administrators/admin__district.css
@@ -14,6 +14,7 @@
 }
 
 .form {
+    word-break: break-word;
     grid-area: form;
     padding: 30px;
 }
@@ -26,8 +27,21 @@
 .danger-circle {
     border: 1px solid black;
     border-radius: 90px;
+    margin-right: 15px;
     width: 30px;
     height: 30px;
+    flex-shrink: 0;
+}
+
+.clickable-circle:hover {
+    stroke-width: 2px;
+    stroke: black;
+    cursor: pointer;
+}
+
+.clicked-circle {
+    stroke-width: 2px;
+    stroke: black;
 }
 
 .danger-level-3 {
