--- a/src/main/resources/static/css/administrators/admin__district.css
+++ b/src/main/resources/static/css/administrators/admin__district.css
@@ -24,6 +24,15 @@
     max-width: 500px;
 }
 
+.danger-circle {
+    border: 1px solid black;
+    border-radius: 90px;
+    margin-right: 15px;
+    width: 30px;
+    height: 30px;
+    flex-shrink: 0;
+}
+
 .clickable-circle:hover {
     stroke-width: 2px;
     stroke: black;
