--- a/src/main/resources/templates/security/sec__main.html
+++ b/src/main/resources/templates/security/sec__main.html
@@ -19,59 +19,73 @@
 
 <div class="content">
     <div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
-    <div th:if="${error}" th:text="${error}" class="flash flash_success"></div>
+    <div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
 
-    <div class="flex-column">
-        <div class="form-item_big gray" th:if="${incidents == null or incidents.isEmpty()}">
-            No records of incidents are available
+    <div class="flex-column form-item_big gray"
+         th:if="${(ongoing_incidents == null or ongoing_incidents.isEmpty()) and (incidents_with_employee == null or incidents_with_employee.isEmpty())}">
+        No records of incidents are available
+    </div>
+
+    <div th:each="inc: ${ongoing_incidents}" class=" content__item">
+        <div class="content__header"
+             th:classappend="|${inc.dangerLevel==3 ? 'danger-level-3' : inc.dangerLevel==2 ? 'danger-level-2' : inc.dangerLevel==1 ? 'danger-level-1' : ''}|">
+        </div>
+        <div class="content__main">
+            <div class="flex-column-left">
+                <b th:text="${'Danger level ' + inc.dangerLevel}"></b>
+                <div class="form-item_micro">
+                    <b>Description</b>
+                    <div th:text="${inc.description}"></div>
+                </div>
+                <div class="form-item_micro">
+                    <b>House</b>
+                    <div th:text="${'(' + inc.house.shelterColumn + ' ; ' + inc.house.shelterRow + ')'}"></div>
+                </div>
+                <div class="form-item_micro">
+                    <b>Date of appearance</b>
+                    <div class="datetime-to-format" th:text="${inc.appearanceTime}"></div>
+                </div>
+                <div class="form-item_small" th:text="${'Available places: ' + inc.availablePlaces}"></div>
+                <div class="form-item_micro"
+                     th:text="${'Level varies from ' + inc.levelFrom + ' to ' + inc.levelTo}"></div>
+            </div>
+            <form action="#" th:action="@{'/sec/incident/'} + ${inc.id}" class="flex-column" method="post">
+                <input type="submit" class="button approved form-item_small" value="Apply">
+            </form>
         </div>
     </div>
-    <div th:each="inc: ${incidents}" class=" content__item">
+
+    <div th:each="inc: ${incidents_with_employee}" class=" content__item">
         <div class="content__header"
-             th:classappend="|${inc.status.name()=='PENDING' ? 'pending' : inc.status.name()=='APPROVED' ? 'approved' : inc.status.name()=='REJECTED' ? 'rejected' : 'finished'}|">
-            <div th:switch="${inc.status.name()}">
-                <img th:case="PENDING" class="content-icon" alt="pending" th:src="@{/images/clock.png}">
-                <img th:case="APPROVED" class="content-icon" alt="approved" th:src="@{/images/pencil.png}">
-                <img th:case="REJECTED" class="content-icon" alt="rejected" th:src="@{/images/x_mark.png}">
-                <img th:case="FINISHED" class="content-icon" alt="finished" th:src="@{/images/tick.png}">
-            </div>
-            <span class="header-text">
-                    <span th:text="${inc.type.name()} == 'MAJOR' ? 'Major' : 'Minor'"></span> inc. #<span
-                    th:text="${inc.id}"></span> <b><span th:text="${inc.title}"></span></b>
-                </span>
+             th:classappend="|${inc.dangerLevel==0 ? 'finished' : inc.availablePlaces==0 ? 'approved' : 'pending'}|">
         </div>
-        <div class="content__main" th:switch="${inc.status.name()}">
+        <div class="content__main">
             <div class="flex-column-left">
-                <div th:if="${inc.assistant}">
-                    <b class="form-item_micro">Assistant</b>
-                    <div th:text="${inc.assistant.employee.name}"></div>
+                <b th:if="${inc.dangerLevel > 0}" th:text="${'Danger level ' + inc.dangerLevel}"></b>
+                <div class="form-item_micro">
+                    <b>Description</b>
+                    <div th:text="${inc.description}"></div>
                 </div>
-                <div class="form-item_micro" th:case="PENDING">
-                    <b>Submitted on </b>
+                <div class="form-item_micro">
+                    <b>House</b>
+                    <div th:text="${'(' + inc.house.shelterColumn + ' ; ' + inc.house.shelterRow + ')'}"></div>
                 </div>
-                <div class="form-item_micro" th:case="APPROVED">
-                    <b>Approved on </b>
+                <div class="form-item_micro">
+                    <b>Date of appearance</b>
+                    <div class="datetime-to-format" th:text="${inc.appearanceTime}"></div>
                 </div>
-                <div class="form-item_micro" th:case="REJECTED">
-                    <b> Rejected on </b>
-                </div>
-                <div class="form-item_micro" th:case="FINISHED">
-                    <b> Finished on </b>
-                </div>
-                <div class="datetime-to-format" th:text="${inc.statusDate}"></div>
-                <b class="form-item_micro">Description</b>
-                <div th:text="${inc.description}"></div>
-                <div th:if="${inc.status.name() == 'FINISHED'}" class="flex-column-left">
-                    <b class="form-item_micro"> Report </b>
-                    <div th:text="${inc.result}"></div>
-                </div>
+                <div class="form-item_small" th:if="${inc.availablePlaces > 0}"
+                     th:text="${'Available places: ' + inc.availablePlaces}"></div>
+                <div class="form-item_micro" th:if="${inc.availablePlaces > 0}"
+                     th:text="${'Level varies from ' + inc.levelFrom + ' to ' + inc.levelTo}"></div>
             </div>
             <div class="flex-column">
-                <a th:if="${inc.status.name()=='APPROVED'}" th:href="@{'/sci/report?id=' + ${inc.id}}"
-                   th:attr="data-inc-id=${inc.id}" class="button form-item_small">Write report</a>
+                <a th:if="${inc.availablePlaces==0 and inc.dangerLevel > 0}" th:href="@{'/sec/report?id='} + ${inc.id}"
+                   class="button form-item_small">Write report</a>
             </div>
         </div>
     </div>
 </div>
+<script rel="script" type="text/javascript" th:src="@{/js/formatDateTime.js}"></script>
 </body>
 </html>
